--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "php-tokio"
 repository = "https://github.com/danog/php-tokio"
 homepage = "https://github.com/danog/php-tokio"
-license = "AGPLv3"
+license = "AGPL-3.0-or-later"
 version = "0.1.0"
 authors = ["Daniil Gentili <daniil@daniil.it>"]
 edition = "2021"
