--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -3,7 +3,7 @@ name = "php-tokio-derive"
 description = "Derive macros for php-tokio."
 repository = "https://github.com/danog/php-tokio"
 homepage = "https://github.com/danog/php-tokio"
-license = "AGPLv3"
+license = "AGPL-3.0-or-later"
 version = "0.1.0"
 authors = ["Daniil Gentili <daniil@daniil.it>"]
 edition = "2021"
