--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ edition = "2021"
 [dependencies]
 nicelocal-ext-php-rs = "0.10.3"
 tokio = { version = "1", features = ["full"] }
-tokio-pipe = "*"
+tokio-pipe = "^0.2"
 lazy_static = "1.4.0"
-libc = "*"
+libc = "^0.2"
 php-tokio-derive = { version = "=0.1.0", path = "./crates/macros" }
 
 
