--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ repository = "https://github.com/danog/php-tokio"
 homepage = "https://github.com/danog/php-tokio"
 license = "AGPL-3.0-or-later"
 description = "Use any async Rust library from PHP!"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Daniil Gentili <daniil@daniil.it>"]
 edition = "2021"
 
@@ -20,4 +20,9 @@ php-tokio-derive = { version = "=0.1.0", path = "./crates/macros" }
 [workspace]
 members = [
     "crates/macros",
+    "examples/reqwest",
 ]
+
+[package.metadata.docs.rs]
+rustdoc-args = ["--cfg", "docs"]
+
