--- a/examples/reqwest/Cargo.toml
+++ b/examples/reqwest/Cargo.toml
@@ -2,13 +2,13 @@
 name = "example-reqwest"
 version = "0.1.0"
 edition = "2021"
-
+publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-php-tokio = "^0.1"
-nicelocal-ext-php-rs = { version = "^0.10.3", features = ["anyhow"] }
+php-tokio = "^0.1.2"
+nicelocal-ext-php-rs = { version = "^0.10.4", features = ["anyhow"] }
 reqwest = "^0.11"
