--- a/examples/reqwest/Cargo.toml
+++ b/examples/reqwest/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["cdylib"]
 php-tokio = "^0.1.2"
 nicelocal-ext-php-rs = { version = "^0.10.4", features = ["anyhow"] }
 reqwest = "^0.11"
+anyhow = "^1.0"
